# tfrecord-slow

./: README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
examples/: bench_fbs_reader.py  bench_fbs_writer.py  bench_flex_writer.py  bench_reader.py  bench_writer.py
src/tfrecord_slow/: msgpack.py  reader.py  writer.py
src/tfrecord_slow/loaders/: msgpack_loader.py  raw_loader.py
src/tfrecord_slow/utils/: loader.py  masked_crc.py  numpy.py
tests/: test_ndarray.py
