[project]
name = "tfrecord-slow"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "SunDoge", email = "384813529@qq.com"},
]
dependencies = [
    "crc32c>=2.3.post0",
    "msgspec>=0.18.6",
    "numpy>=1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
[tool.pdm.dev-dependencies]
dev = [
    "ipdb>=0.13.13",
    "safetensors>=0.4.1",
    "pytest>=8.0.0",
]
